# Nexus

./: .editorconfig  .gitignore  Cargo.toml  flake.nix  rustfmt.toml
.cargo/: config.toml
api/: Cargo.toml
api-macros/: Cargo.toml
api-macros/src/: func_struct.rs  lib.rs  static_parser.rs  str_to_cstr.rs  struct_literal.rs
api/c_interops/: Cargo.toml
api/c_interops/src/: lib.rs
api/core/: Cargo.toml
api/core/src/: lib.rs  plugin.rs  runtime.rs
api/macros/: Cargo.toml
api/macros/src/: func_parser.rs  intercept_async_fn.rs  lib.rs
api/src/: plugin.rs
app/core/: Cargo.toml
app/core/src/: loader.rs  main.rs  on_shutdown.rs
app/utils/: Cargo.toml  init_logging.rs  lib.rs
app/utils/discord/: mod.rs
app/utils/src/: canonicalize_unexistent.rs  init_logging.rs  lib.rs
app/utils/src/discord/: config.rs  mod.rs  payload.rs
example-rust/: Cargo.toml
example-rust/src/: lib.rs
metrics/: Cargo.toml
metrics/src/: audits.rs  config.rs  lib.rs  metrics.rs  sys_info.rs
