[package]
name = "nexus-example"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["dylib"]

[lints]
workspace = true

[dependencies]
nexus-api.workspace = true
tracing.workspace = true
