[package]
name = "nexus-metrics"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["dylib"]

[lints]
workspace = true

[dependencies]
nexus-api = { path = "../api/core" }
tracing = "^0.1"
serde = "^1.0"
sysinfo = "0.32.0"
humantime = "2.1.0"
tokio.workspace = true
