[package]
name = "nexus-metrics"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
nexus-api.workspace = true
serde = "^1.0"
sysinfo = "^0.32"
humantime = "^2.1"

[lints]
workspace = true
