[package]
name = "nexus-api-c_interops"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
tracing.workspace = true
async-trait.workspace = true
tracing-subscriber.workspace = true
nexus-api-macros.workspace = true
