[package]
name = "nexus-api"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["dylib"]

[lints]
workspace = true

[dependencies]
nexus-api-macros.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
