[package]
name = "nexus-api-macros"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
macros-lib.workspace = true
