[package]
name = "nexus-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[target.'cfg(unix)'.dependencies]
jemallocator = "^0.5"

[dependencies]
nexus-api.workspace = true
nexus-utils.workspace = true
libloading.workspace = true
tokio.workspace = true
tracing.workspace = true
