[package]
name = "nexus-core"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
mimalloc = { version = "^0.1", optional = true }

[features]
default = []

[dependencies]
nexus-utils.workspace = true
libloading.workspace = true
tracing.workspace = true
tokio.workspace = true
