[package]
name = "nexus-utils"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
nexus-api.workspace = true
debug_print.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-layer-core.workspace = true
regex.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
