[package]
name = "nexus-utils"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
nexus-api.workspace = true
debug_print.workspace = true
color-eyre.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-layer-core.workspace = true
serde.workspace = true
serde_json.workspace = true
